Replaced 'Stream.collect(Collectors.toList())' with 'Stream.toList()'